Changes in 1.1:
  o API Changes
    * Moved to a new namespace, rpath_xmllib. rpath_common.xmllib is
      still available for backwards compatibility.

Changes in 1.0:
  o General Availability:
    * rpath-xmllib is now stable software released for general use.

Changes in 0.2:
  o Bug Fixes:
    * parseFile method now seeks before and after attempting to read
      the stream.

Changes in 0.1:
  o API Changes:
    * xmldata.py moved from Conary into rpath_common module as xmllib,
      and interface significantly changed.