@@ -50,6 +50,8 @@ class SerializableObject(object):
     Base class for an XML-serializable object
     """
 
+    __slots__ = ()
+
     # pylint: disable-msg=R0903
     # Too few public methods (1/2): this is an interface
     def getElementTree(self, parent = None):
@@ -110,9 +112,8 @@ class SerializableObject(object):
 
 class _AbstractNode(SerializableObject):
     """Abstract node class for parsing XML data"""
-    __slots__ = ['_children', '_nsMap', '_name', '_nsAttributes',
-                 '_otherAttributes', ]
-    _name = (None, None)
+    __slots__ = ('_children', '_nsMap', '_name', '_nsAttributes',
+                 '_otherAttributes', )
 
     def __init__(self, attributes = None, nsMap = None, name = None):
         SerializableObject.__init__(self)
@@ -354,6 +355,8 @@ class _AbstractNode(SerializableObject):
 
 class BaseNode(_AbstractNode):
     """Base node for parsing XML data"""
+
+    __slots__ = ()
 #}
 
 #{ Specialized nodes
@@ -371,6 +374,8 @@ class GenericNode(BaseNode):
     attribute in _singleChildren will cause the value to be stored directly.
     """
 
+    __slots__ = ()
+
     def __init__(self, attributes = None, nsMap = None):
         BaseNode.__init__(self, attributes = attributes, nsMap = nsMap)
 
@@ -382,7 +387,12 @@ class IntegerNode(BaseNode):
     an integer when finalize is called. All attributes and tags will be lost.
     If no text is set, this object will default to 0.
     """
-    _name = (None, 'int')
+
+    __slots__ = ()
+
+    def __init__(self, *args, **kwargs):
+        self._name = (None, 'int')
+        BaseNode.__init__(self, *args, **kwargs)
 
     def finalize(self):
         "Convert the character data to an integer"
@@ -405,7 +415,12 @@ class StringNode(BaseNode):
     a string when finalize is called. All attributes and tags will be lost.
     If no text is set, this object will default to ''.
     """
-    _name = (None, 'string')
+
+    __slots__ = ()
+
+    def __init__(self, *args, **kwargs):
+        self._name = (None, 'string')
+        BaseNode.__init__(self, *args, **kwargs)
 
     def finalize(self):
         "Convert the text data to a string"
@@ -425,7 +440,12 @@ class NullNode(BaseNode):
     None when finalize is called. All attributes and tags will be lost.
     All text will be lost.
     """
-    _name = (None, 'none')
+
+    __slots__ = ()
+
+    def __init__(self, *args, **kwargs):
+        self._name = (None, 'none')
+        BaseNode.__init__(self, *args, **kwargs)
 
     def finalize(self):
         "Discard the character data"
@@ -443,7 +463,12 @@ class BooleanNode(BaseNode):
     a bool when finalize is called. All attributes and tags will be lost.
     '1' or 'true' (case insensitive) will result in True.
     """
-    _name = (None, 'bool')
+
+    __slots__ = ()
+
+    def __init__(self, *args, **kwargs):
+        self._name = (None, 'bool')
+        BaseNode.__init__(self, *args, **kwargs)
 
     def finalize(self):
         "Convert the character data to a boolean value"
